added folders and files and links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>SDA Workbook</h1>
-<a href="checkpoints/">Checkpoints</a>
+<a href="homework/homework.html">Homework</a>
 <br>
-<a href="homework/">Homework</a>
+<a href="checkpoints/checkpoints.html">Checkpoints</a>
+<br>
+<a href="portfolio/portfolio.html">Portfolio</a>
