css styles and structure

--- a/checkpoints/checkpoints.html
+++ b/checkpoints/checkpoints.html
@@ -1,7 +1,27 @@
-<a href="../index.html">&lt;Back</a>
-<h1>Checkpoints</h1>
-<a href="#">Checkpoint_01</a>
-<br>
-<a href="#">Checkpoint_02</a>
-<br>
-<a href="#">Checkpoint_03</a>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="../_assets/style.css" type="text/css" />
+  <title>Checkpoints</title>
+</head>
+
+<body>
+  <div class="page">
+    <a href="../index.html" class="back">Back</a>
+    <main class="checkpoints">
+      <h1>Checkpoints</h1>
+      <div class="links">
+        <a href="checkpoint_01/index.html" target="_blank">Checkpoint_01</a>
+        <a href="checkpoint_02/index.html" target="_blank">Checkpoint_02</a>
+        <a href="checkpoint_03/index.html" target="_blank">Checkpoint_03</a>
+      </div>
+
+    </main>
+  </div>
+</body>
+
+</html>
