--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
-<h1>SDA Workbook</h1>
-<a href="homework/homework.html">Homework</a>
-<br>
-<a href="checkpoints/checkpoints.html">Checkpoints</a>
-<br>
-<a href="portfolio/portfolio.html">Portfolio</a>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="_assets/style.css" type="text/css" />
+  <title>SDA Workbook</title>
+</head>
+
+<body>
+  <div class="page">
+    <header>
+      <div class="logo">
+        <img src="_assets/images/aca_circle_logo.png"></img>
+      </div>
+      <h1>Site Development Associate Workbook</h1>
+    </header>
+    <main class="home">
+      <a href="homework/homework.html">Homework</a>
+      <a href="checkpoints/checkpoints.html">Checkpoints</a>
+      <a href="portfolio/portfolio.html">Portfolio</a>
+    </main>
+  </div>
+</body>
+
+</html>
