--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,4 +1,24 @@
-<a href="../index.html">&lt;Back</a>
-<h1>Portfolio Project</h1>
-<a href="#">View Portfolio Website</a>
-  
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="../_assets/style.css" type="text/css" />
+  <title>Portfolio Project</title>
+</head>
+
+<body>
+  <div class="page">
+    <a href="../index.html" class="back">Back</a>
+    <main class="portfolio">
+      <h1>Portfolio</h1>
+      <div class="links">
+        <a href="portfolio_website/index.html" target="_blank">Portfolio Website</a>
+      </div>
+    </main>
+  </div>
+</body>
+
+</html>
