--- a/homework/homework.html
+++ b/homework/homework.html
@@ -1,7 +1,26 @@
-<a href="../index.html">&lt;Back</a>
-<h1>Homework</h1>
-<a href="#">Week_02</a>
-<br>
-<a href="#">Week_04</a>
-<br>
-<a href="#">Week_06</a>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="../_assets/style.css" type="text/css" />
+  <title>Homework</title>
+</head>
+
+<body>
+  <div class="page">
+    <a href="../index.html" class="back">Back</a>
+    <main class="homework">
+      <h1>Homework</h1>
+      <div class="links">
+        <a href="week_02/index.html" target="_blank">Week_02</a>
+        <a href="week_04/index.html" target="_blank">Week_04</a>
+        <a href="week_06/index.html" target="_blank">Week_06</a>
+      </div>
+    </main>
+  </div>
+</body>
+
+</html>
