--- a/homework/homework.html
+++ b/homework/homework.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="../_assets/style.css" type="text/css" />
+  <link rel="stylesheet" href="../assets/style.css" type="text/css" />
   <title>Homework</title>
 </head>
 
