--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="_assets/style.css" type="text/css" />
+  <link rel="stylesheet" href="assets/style.css" type="text/css" />
   <title>SDA Workbook</title>
 </head>
 
@@ -13,7 +13,7 @@
   <div class="page">
     <header>
       <div class="logo">
-        <img src="_assets/images/aca_circle_logo.png"></img>
+        <img src="assets/images/aca_circle_logo.png"></img>
       </div>
       <h1>Site Development Associate Workbook</h1>
     </header>
