--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
     <header>
       <div class="logo">
-        <img src="assets/images/aca_circle_logo.png"></img>
+        <img src="assets/images/aca_circle_logo.png" alt="logo"/>
       </div>
       <h1>Site Development Associate Workbook</h1>
     </header>
