--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>workbook</title>
 </head>
 <body>
     <!--type text here-->
-    Hello World!
+    Hello World!!
 </body>
 </html>
