--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Workbook</title>
 </head>
 <body>
     <!--type text here-->
+    Hello World!!!
 </body>
 </html>
