--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
     <title>WorkBook</title>
 </head>
 <body>
-   Hello World
-</body>
+   <h1>Table of Contents</h1><br>
+   <h3>Lesson02</h3>
+   <a href="/lab-files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a><br>
+   <a href="/lab-files/Lesson02/Assignment/Resume.html">Lesson02 - Assignment - Resume.html</a><br>
+   <h3>Challenges</h3>
+        <ul>
+            <li><a href="/lab-files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a></li>
+            <li><a href="/lab-files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a></li>
+            <li><a href="/lab-files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
+            <li><a href="/lab-files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
+        </ul>
+   </body>
 </html>
