--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,19 @@
     <title>Workbook</title>
 </head>
 <body>
-    <p> hey boyo </p>
+    Table of Contents: <br>
+    <h2>Lesson 2</h2>
+        <h3>Challenges</h3>
+        <ul>
+            <li><a href="/Lab-Files/Lesson02/Challenges/blog-post.html">Blog Post Challenge</a> </li>
+            <li><a href="/Lab-Files/Lesson02/Challenges/text-level-elements.html">Text Level Editor Challenge</a></li>
+            <li><a href="/Lab-Files/Lesson02/Challenges/lists.html">List Challenge</a></li>
+            <li><a href="/Lab-Files/Lesson02/Challenges/images.html">Image Challenge</a></li>
+        </ul>
+        <h3>Misc</h3>
+        <ul>
+            <li><a href="/Lab-Files/Lesson02/Habitat/syb.html"> Lesson02 - Habitat - syb.html</a></li>
+            <li><a href="/Lab-Files/Lesson02/Assignment">Assignment</a></li>
+        </ul>
 </body>
 </html>
