Lesson02 - Challenges Completed

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,17 @@
     <title>workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!!
+    <h1>Table of Contents: </h1><br>
+    <h2>Lesson02</h2>
+    <a href="/Lab-Files/Lesson02/Habitat/syb.html"></a>
+    <a href="/Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat-syb.html</a><br>
+    
+    <a href="/Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat-syb.html</a><br>
+    <a href="/Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a><br>
+    <a href="/Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a><br>
+    <a href="/Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a><br>
+    <a href="/Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a><br>
+    <a href="/Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a><br>
+    <a href="/Lab-Files/Lesson03/bio.html">Lesson03 - bio - bio.html</a><br>
 </body>
 </html>
