--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,17 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!
+    <h1>Table of Context:</h1> <br>
+    <h2>Lesson02</h2>
+    <a href="/Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a> <br>
+    <h3>Assignment:</h3>
+    <a href="/Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a> <br>
+    <h3>Challenges:</h3>
+    <ul>
+        <li><a href="/Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a></li>
+        <li><a href="/Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a></li>
+        <li><a href="/Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
+        <li><a href="/Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
+    </ul>
 </body>
 </html>
