Lesson02 Challenges Completed

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <title>Workbook</title>
 </head>
 <body>
-    Hello World
+    Table of contents : <br>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</syb></a><br>
+    <a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a><br>
+    <h3>Challenges</h3>
+    <ul>
+    <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - text-lists.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
+    </ul>
 </body>
 </html>
