Lesson 2 - Challenges Completed

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!
+    <h1>Table of Contents:</h1> 
+    <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a> <br><br>
+    <a href="Lab-Files/Lesson02/Assignment/resume.html"> Lesson02 - Assignment -resume.html</resume></a><br><br>
+    <a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges -blog-post.html</resume></a><br><br>
+    <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html"> Lesson02 - Challenges -text-level-element.html</resume></a><br><br>
+    <a href="Lab-Files/Lesson02/Challenges/lists.html"> Lesson02 - Challenges -lists.html</resume></a><br><br>
+    <a href="Lab-Files/Lesson02/Challenges/images.html"> Lesson02 - Challenges -images.html</resume></a>
 </body>
 </html>
