--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,16 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!
+    <h1>Table of Contents:</h1>
+    
+    <h2>Lesson02</h2>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a> <br>
+    <h4>Assignments</h4>
+    <a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a><br>
+    <h4>Challenges</h4>
+     <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a></li>
+     <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a></li>
+     <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists</a></li>
+     <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images</a></li>
 </body>
 </html>
