--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Workbook</title>
+    <title>workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!
+  <h1>Table of Contents:</h1>
+  <h2>Lesson02</h2>
+  <a href="Lab-Files/Lesson02/Habitat/syb.html"> Lesson02 - Habitat - syb.html</a>
+  <h2>Assignments</h2>
+  <a href="Lab-Files/Lesson02/Assignment/Resume/Resume.html">Lesson02 - Resume.html</a> <br>
+  <h2>Challenges</h2>
+  <a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a><br>
+  <a href="Lab-Files/Lesson02/Challenges/images.html"> Lesson02 - Challenges - images.html</a><br>
+  <a href="Lab-Files/Lesson02/Challenges/list.html"> Lesson02 - Challenges - list.html</a><br>
+  <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html"> Lesson02 - Challenges - text-level-elements.html</a>
 </body>
 </html>
+
