--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     Table of Contents: <br>
-    <h2>Lesson 2</h2>
+    <h2>Lesson 2:</h2>
         <h3>Challenges</h3>
         <ul>
             <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Blog Post Challenge</a> </li>
@@ -14,10 +14,13 @@
             <li><a href="Lab-Files/Lesson02/Challenges/lists.html">List Challenge</a></li>
             <li><a href="Lab-Files/Lesson02/Challenges/images.html">Image Challenge</a></li>
         </ul>
-        <h3>Misc</h3>
+        <h3>Assignment</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Resume</a></li>
+        </ul>
+        <h3>Labs</h3>
         <ul>
             <li><a href="Lab-Files/Lesson02/Habitat/syb.html"> Lesson02 - Habitat - syb.html</a></li>
-            <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Resume</a></li>
         </ul>
 </body>
 </html>
