Lesson 2 - Assignment Completed

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,17 @@
 <body>
     <h1>Table of Contents:</h1> <br>
     <h2>Lesson Two</h2>
-    <a href="/Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a><br>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a><br>
     <br>
-    <a href="/Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - syb.html</a><br>
+    <a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - syb.html</a><br>
     <br>
-    <a href="/Lab-Files/Lesson02/Challenges/Lists.html">Lesson02 - Challenges - Lists.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/Lists.html">Lesson02 - Challenges - Lists.html</a><br>
     <br>
-    <a href="/Lab-Files/Lesson02/Challenges/Images.html">Lesson02 - Challenges - Images.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/Images.html">Lesson02 - Challenges - Images.html</a><br>
     <br>
-    <a href="/Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - Text Level Elements.html</a><br>
-    
+    <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - Text Level Elements.html</a><br>
+    <br>
+    <a href="Lab-Files/Lesson02/Assignment/Resume.html">Lesson02 - Assignment - Resume.html</a><br>
 
     
 </body>
