Lesson 3 - Lab Completed

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,14 @@
         <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
         <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
     </ul>
+    
+    <h2>Lesson03</h2>
+    <ul>
+        <li><a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html">Lesson03 - Habitat - syb.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Lesson03 - Challenges - box-positioning.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenges - wild-animal.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html">Lesson03 - Challenges - apple-bananas.html</a></li>
+        <li><a href="Lab-Files/Lesson03/Assignment/blog-page.html">Lesson03 - Assignment - blog-poge.html</a></li>
+    </ul>
 </body>
 </html>
