Lesson03 Challenges and Index.html

--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,20 @@
         <ul>
             <li><a href="Lab-Files/Lesson02/Habitat/syb.html"> Lesson02 - Habitat - syb.html</a></li>
         </ul>
+    <h2>Lesson: 3</h2>
+        <h3>Challenges</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html"> Box Positioning</a></li>
+                <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Apples and Bananas</a></li>
+                <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html"> Wild Animal</a></li>
+            </ul>
+        <h3>Assignment</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson03/Assignment/blog-page.html"> Blog Page</a></li>
+        </ul>
+        <h3>Labs</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html"> Lesson03 - syb.html</a></li>
+        </ul>
 </body>
 </html>
