Lesson03 - Upedated index

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>workbook</title>
+    <style>
+      body{
+        background-color:grey;
+      }
+      h1, h2, h3{
+        color:cyan;
+      }
+      a{
+        color:Pink;
+      }
+      </style>
 </head>
 <body>
   <h1>Table of Contents:</h1>
   <h2>Lesson02</h2>
-  <a href="Lab-Files/Lesson02/Habitat/syb.html"> Lesson02 - Habitat - syb.html</a>
-  <h2>Assignments</h2>
-  <a href="Lab-Files/Lesson02/Assignment/Resume/Resume.html">Lesson02 - Resume.html</a> <br>
-  <h2>Challenges</h2>
-  <a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a><br>
-  <a href="Lab-Files/Lesson02/Challenges/images.html"> Lesson02 - Challenges - images.html</a><br>
-  <a href="Lab-Files/Lesson02/Challenges/list.html"> Lesson02 - Challenges - list.html</a><br>
-  <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html"> Lesson02 - Challenges - text-level-elements.html</a>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html"> Lesson02 - Habitat - syb.html</a>
+  <h3>Assignments</h3>
+    <a href="Lab-Files/Lesson02/Assignment/Resume/Resume.html">Lesson02 - Resume.html</a> <br>
+  <h3>Challenges</h3>
+    <a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/images.html"> Lesson02 - Challenges - images.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/list.html"> Lesson02 - Challenges - list.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html"> Lesson02 - Challenges - text-level-elements.html</a><br>
+  <h2>Lesson03</h2>
+  <h3>Assignment</h3>
+    <a href="Lab-Files/Lesson03/Assignment/blog-page.html"> Lesson03 - Assignment - blog-.html</a>
+  <h3>Labs</h3>
+    <a href="Lab-Files/Lesson03/Habitat/CCYP/syb/syb.css"> Lesson03 - Habitat - syb.css</a><br>
+    <a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html"> Lesson03 - Habitat - syb.html</a>
+  <h3>Challenges</h3>
+    <a href="Lab-Files/Lesson03/challenges/box-positioning.html"> Lesson03 - Challenges - Box-positioning</a><br>
+    <a href="Lab-Files/Lesson03/challenges/wild-animal.html"> Lesson03 - Challenges - Wild-Animal</a><br>
+    <a href="Lab-Files/Lesson03/challenges/apples-bananas.html"> Lesson03 - Challenges - apples-bananas.html</a>
+  <h2>Lesson04</h2>
+  <h3>Assignments</h3>
+  
+  <h3>Challenges</h3>
+    <a href="Lab-Files/Lesson04/challenges/box-model.html"> Lesson04 - Challenges - Box-model</a><br>
+    <a href="Lab-Files/Lesson04/challenges/flexbox-flags.html"> Lesson04 - Challenges - Flexbox flags</a><br>
+    <a href="Lab-Files/Lesson04/challenges/public/index.html"> Lesson04 - Challenges - Team Build 1</a><br>
+    <a href="Lab-Files/Lesson04/challenges/public_2/index.html"> Lesson04 - Challenges - Team Build 2</a><br>
+
 </body>
 </html>
 
