Lesson 4 - Assignments Completed

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,27 @@
 </head>
 <body>
     <h1>Table of Contents:</h1> 
+    <h2>Lesson 02</h2>
     <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat - syb.html</a> <br><br>
     <a href="Lab-Files/Lesson02/Assignment/resume.html"> Lesson02 - Assignment -resume.html</resume></a><br><br>
     <a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges -blog-post.html</resume></a><br><br>
     <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html"> Lesson02 - Challenges -text-level-element.html</resume></a><br><br>
     <a href="Lab-Files/Lesson02/Challenges/lists.html"> Lesson02 - Challenges -lists.html</resume></a><br><br>
     <a href="Lab-Files/Lesson02/Challenges/images.html"> Lesson02 - Challenges -images.html</resume></a>
+    <h2>Lesson 03</h2>
+    <a href="Lab-Files/Lesson03/Habitat/CCYP/syb/Old/syb.html">Lesson03 - Habitat - syb.html</a><br><br>
+    <a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html">Lesson 03 - Habitat -syb.html</a><br><br>
+    <a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Lesson03 - Challenges - box-positioning.html</a><br><br>
+    <a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenges - wild-animal.html</a><br><br>
+    <a href="Lab-Files/Lesson03/Challenges/apples-bananas.html">Lesson03 - Challenges - apples-bananas.html</a><br><br>
+    <a href="Lab-Files/Lesson03/Assignment/blog-page.html">Lesson03 - Assignment - blog-page.html</a>
+    <h2>Lesson 04</h2>
+    <a href="Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenges - box-model.html</a><br><br>
+    <a href="Lab-Files/Lesson04/Assignments/public/index.html">Lesson04 - Assignments - index.html</a><br><br>
+    <a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenges - flexbox-flags.html</a><br><br>
+    <a href="Lab-Files/Lesson04/Assignments/public-2/index.html">Lesson04 - Assignments - index.html</a><br><br>
+    <h2>Lesson 05</h2>
+    <a href="Lab-Files/Lesson05/Challenges/public 4/project1.html">Lesson05 - Challenges - project1.html</a>
 </body>
+
 </html>
