--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,33 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta charset="UTF-8">
     <title>workbook</title>
 </head>
 <body>
     <h1>Table of Contents: </h1><br>
     <h2>Lesson02</h2>
-    <a href="/Lab-Files/Lesson02/Habitat/syb.html"></a>
-    <a href="/Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat-syb.html</a><br>
-    
-    <a href="/Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat-syb.html</a><br>
-    <a href="/Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a><br>
-    <a href="/Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a><br>
-    <a href="/Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a><br>
-    <a href="/Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a><br>
-    <a href="/Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a><br>
-    <a href="/Lab-Files/Lesson03/bio.html">Lesson03 - bio - bio.html</a><br>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html"></a>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat-syb.html</a><br>
+    <a href="Lab-Files/Lesson02/Habitat/syb.html">Lesson02 - Habitat-syb.html</a><br>
+    <a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenges - blog-post.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenges - text-level-elements.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a><br>
+    <a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a><br>
+    <h2>Lesson03</h2>
+    <a href="Lab-Files/Lesson03/bio.html">Lesson03 - bio - bio.html</a><br>
+    <a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html">Lesson03 - Habitat - syb.html</a><br>
+    <a href="Lab-Files/Lesson03/Assignments/blog-page.html">Lesson03 - Assignments - blog-page.html</a><br>
+    <a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Lesson03 - Challenges - box-positioning.html</a><br>
+    <a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenges - wild-animal.html</a><br>
+    <h2>Lesson04</h2>
+    <a href="Lab-Files/Lesson04/Challenges/flexbox-flag.html">Lesson04 - Challenges - flexbox-flag.html</a><br>
+    <a href="Lab-Files/Lesson04/Assignments/public2/yellow.html">Lesson04 - Assignments - yellow.html</a><br>
+    <a href="Lab-Files/Lesson04/Assignments/team-project-day2/blue.html">Lesson04 - Assignments - team project 2 - blue.html</a><br>
+    <h2>Lesson05</h2>
+    <a href="Lab-Files/Lesson05/Lab_5-1/syb_day.html">Lesson05 - Lab 5-1 - syb_day.html</a><br>
+
 </body>
 </html>
