--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <a href="Lab-Files/Lesson04/Assignments/team-project-day2/blue.html">Lesson04 - Assignments - team project 2 - blue.html</a><br>
     <h2>Lesson05</h2>
     <a href="Lab-Files/Lesson05/Lab_5-1/syb_day.html">Lesson05 - Lab 5-1 - syb_day.html</a><br>
-
+    <a href="Lab-Files/Lesson05/Challenges/green-team/green-flex.html">Lesson05 - Challenges -green-flex.html</a><br>
+    <a href="Lab-Files/Lesson05/Assignments/pricing-table.html">Lesson05 - Assignments - pricing-table.html</a><br>
 </body>
 </html>
