Lesson 5 - Labs Completed

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,13 @@
     <a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenges - flexbox-flags.html</a><br><br>
     <a href="Lab-Files/Lesson04/Assignments/public-2/index.html">Lesson04 - Assignments - index.html</a><br><br>
     <h2>Lesson 05</h2>
-    <a href="Lab-Files/Lesson05/Challenges/public 4/project1.html">Lesson05 - Challenges - project1.html</a>
+    <a href="Lab-Files/Lesson05/Challenges/public_4/project1.html">Lesson05 - Challenges - project1.html</a><br><br>
+    <a href="Lab-Files/Lesson05/Labs/Lab_5-1/syb_day.html">Lesson05 - Lab_5-1 - syb.html</a><br><br>
+    <a href="Lab-Files/Lesson05/Labs/Lab_5-2/syb_day.html">Lesson05 - Lab_5-2 - syb.html</a><br><br>
+    <a href="Lab-Files/Lesson05/Challenges/public_5/floated.html">Lesson05 - Challenges - floated.html</a><br><br>
+    <a href="Lab-Files/Lesson05/Challenges/public_5/flexbox.html">Lesson05 - Challenges - flexbox.html</a><br><br>
+    <a href="Lab-Files/Lesson05/Challenges/public_5/inline.html">Lesson05 - Challenges - inline.html</a><br><br>
+    <h2>Lesson 06</h2>
 </body>
 
 </html>
