Lesson 5 - Assignment 2: Inline-block Completed

--- a/public/index.html
+++ b/public/index.html
@@ -68,5 +68,14 @@
         <li><a href="Lab-Files/Lesson05/Assignment/public-5a/index.html">Lesson05 - Assignment 2: flexbox - index.html</a></li>
         <li><a href="Lab-Files/Lesson05/Assignment/public-5b/index.html">Lesson05 - Assignment 2: inline-block - index.html</a></li>
     </ul>
+    
+    <h2>Lesson06</h2>
+    <h3>Labs:</h3>
+    <ul></ul>
+    
+    <h3>Assignments:</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson06/Assignment/public-7/index.html">Lesson06 - Assignment 1 - index.html</a></li>
+    </ul>
 </body>
 </html>
