Lesson 5 - Challenges Completed

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     <a href="Lab-Files/Lesson05/Challenges/public_5/flexbox.html">Lesson05 - Challenges - flexbox.html</a><br><br>
     <a href="Lab-Files/Lesson05/Challenges/public_5/inline.html">Lesson05 - Challenges - inline.html</a><br><br>
     <h2>Lesson 06</h2>
+    <a href="Lab-Files/Lesson06/Challenges/team-project-1/index.html">Lesson06 - Challenges - team-project-1</a><br><br>
+    <a href="Lab-Files/Lesson06/Challenges/team-project-2/index.html">Lesson06 - Challenges - team-project-2</a>
 </body>
 
 </html>
