Lesson 6 - Challenges Completed

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,14 @@
     <a href="Lab-Files/Lesson05/Challenges/public_5/inline.html">Lesson05 - Challenges - inline.html</a><br><br>
     <h2>Lesson 06</h2>
     <a href="Lab-Files/Lesson06/Challenges/team-project-1/index.html">Lesson06 - Challenges - team-project-1</a><br><br>
-    <a href="Lab-Files/Lesson06/Challenges/team-project-2/index.html">Lesson06 - Challenges - team-project-2</a>
+    <a href="Lab-Files/Lesson06/Challenges/team-project-2/index.html">Lesson06 - Challenges - team-project-2</a><br><br>
+    <a href="Lab-Files/Lesson06/Labs/Lab_6-1/formmail/FormMail.pl">Lesson06 - Labs - Lab_6-1</a><br><br>
+    <a href="Lab-Files/Lesson06/Labs/Lab_6-1/formmail/README">Lesson06 - Labs - Lab_6-1</a><br><br>
+    <a href="Lab-Files/Lesson06/Labs/Lab_6-2/lab_6-2.html">Lesson06 - Labs - Lab_6-2</a><br><br>
+    <h2>Lesson 07 & 08</h2>
+    <a href="Lab-Files/Lesson07/Challenge/index.html">Lesson07&08 - Challenge - team-project</a><br><br>
+
+    
 </body>
 
 </html>
