--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,14 @@
     <a href="Lab-Files/Lesson07/Lab_7/Lab_7-5/lab_7-5.html">Lesson07 - Labs - lab_7-5.html</a><br>
     <a href="Lab-Files/Lesson07/Lab_7/Lab_7-6/lab_7-6.html">Lesson07 - Labs - lab_7-6.html</a><br>
     <a href="Lab-Files/Lesson07/Challenges/Green-Team/public/plug-ma.html">Lesson07 - Challenges - PlugMa Mockup</a>
+    <h2>Lesson08</h2>
+    <a href="Lab-Files/Lesson08/Lab_8-1/hello.html">Lesson08 - Labs - Lab_8-1</a><br>
+    <a href="Lab-Files/Lesson08/Lab_8-2/lab_8-2.html">Lesson08 - Labs - Lab_8-2</a><br>
+    <a href="Lab-Files/Lesson08/Lab_8-3/canvas-1.html">Lesson08 - Labs - Lab_8-3 - canvas-1</a><br>
+    <a href="Lab-Files/Lesson08/Lab_8-3/canvas-2.html">Lesson08 - Labs - Lab_8-3 - canvas-2</a><br>
+    <a href="Lab-Files/Lesson08/Lab_8-4/date.html">Lesson08 - Labs - Lab_8-4 - Date</a><br>
+    <a href="Lab-Files/Lesson08/Lab_8-5/Geolocation.html">Lesson08 - Labs - Lab_8-5 - Geolocation</a><br>
+    <a href="Lab-Files/Lesson08/Lab_8-6/Drag_and_Drop.html">Lesson08 - Labs - Lab_8-6 - Drag_and_Drop</a><br>
     
     <br>
     <br>
