--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <a href="Lab-Files/Lesson06/Labs/Lab_6-1/formmail/README">Lesson06 - Labs - Lab_6-1</a><br><br>
     <a href="Lab-Files/Lesson06/Labs/Lab_6-2/lab_6-2.html">Lesson06 - Labs - Lab_6-2</a><br><br>
     <h2>Lesson 07</h2>
-    <a href="Lab-Files/Lesson07/Challenge/index.html">Lesson07&08 - Challenge - team-project</a><br><br>
+    <a href="Lab-Files/Lesson07/Challenge/index.html">Lesson07 and 08 - Challenge - team-project</a><br><br>
     <a href="Lab-Files/Lesson07/Labs/Lab_7-3/lab_7-3.html">Lesson07 - Labs - 7-3 - lab_7-3.html</a><br><br>
     <a href="Lab-Files/Lesson07/Labs/Lab_7-4/lab_7-4.html">Lesson07 - Labs - 7-4 - lab_7-4.html</a><br><br>
     <a href="Lab-Files/Lesson07/Labs/Lab_7-5/lab_7-5.html">Lesson07 - Labs - 7-5 - lab_7-5.html</a><br><br>
