Updated Index File

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    
-    Hello World!
+<h1>Index</h1>
+
+<h2>Lesson 2:</h2>
+
+<h3>Challenges:</h3>
+<ul>
+    <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson 02 - Blog Post</a></li>
+</ul>
+
 </body>
 </html>
