Update Index File

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,23 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
+  <h1>Index</h1>
+  
+  <h2>Lesson 2:</h2>
+  
+  <h3>  Challenges: </h3>
+  
+  <ul>
     
-    Hello World!
+      <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson 02 - Blog Post</a></li>
+      <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson 03 - Blog Post</a></li>
+      <li></li>
+      <li></li>
+  </ul>
+  
+  <link rel="stylesheet" href="" type="text/css" />
+ 
+    
+ 
 </body>
 </html>
