--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!!!
+<h1>Table of Contents:</h1>
+<h2>Lesson02</h2>
+<h3>Challenges:</h3>
+<ul>
+    <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/text-level-element.html">Lesson02 - Challenges - text-level-element.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
+    <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
+</ul>
+
 </body>
 </html>
