Lesson Two-Pending

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <title>Workbook</title>
 </head>
 <body>
-    <!--type text here-->
-    Hello World!
+   <h1>Table of Contents:</h1>
+   <h2>Lesson02</h2>
+   <h3>Challenges: </h3>
+       <ul>
+           <li><a href="Lab-files/Lesson02/Challenges/blog-post.html">Blog Post Challenge</a></li>
+           <li><a href="Lab-files/Lesson02/Challenges/lists.html">Lists</a></li>
+           <li><a href="Lab-files/Lesson02/Challenges/text-level-elements.html">Text Level Elements</a></l1>
+           <li><a href="Lab-files/Lesson02/Challenges/text-level-elements.html">Images<a/></li>
+       </ul>
+    
 </body>
 </html>
