Testing back function

--- a/public/Lab-Files/Lesson02/Challenges/lists.html
+++ b/public/Lab-Files/Lesson02/Challenges/lists.html
@@ -16,7 +16,7 @@
     <li>Want to learn to be a consultant and own a brand building firm</li>
 </ul>
 
-<a href="/">&lt;&lt;- back</a> 
+<a href="sda-workbook/public/">&lt;&lt;- back</a> 
 
 </body>
 </html>
