--- a/public/Lab-Files/Lesson02/Challenges/blog-post.html
+++ b/public/Lab-Files/Lesson02/Challenges/blog-post.html
@@ -5,7 +5,7 @@
     <title>Blog</title>
 </head>
 <body>
-     <a href="/">Back</a>
+     <a href="/">&lt;&lt;Back</a>
     <h1>This is my blog</h1>
     
     <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, quibusdam, blanditiis, sit magnam placeat asperiores sed sint quod laudantium soluta id sunt explicabo numquam ullam alias voluptas amet perferendis! Minus.</span>
