--- a/public/Lab-Files/Lesson02/Challenges/images.html
+++ b/public/Lab-Files/Lesson02/Challenges/images.html
@@ -14,11 +14,11 @@
 
     <p>I would see scenes like the following: <br>
        
-           <img src="https://www.whistler.com/images/header/404-whistler.jpg" alt="Snow" style="width:600px;height:300px;">   
+           <img src="https://www.whistler.com/images/header/404-whistler.jpg" alt="Photo of Snow" style="width:600px;height:300px;">   
     </p>
 
     <p>And do things like the following:
-         <img src="https://www.whistler.com/images/header/whistler-winter-album-2016.jpg" alt="Skiing" style="width:650px;height:400px;">
+         <img src="https://www.whistler.com/images/header/whistler-winter-album-2016.jpg" alt="Photo of Skiing" style="width:650px;height:400px;">
     </p>
 
 
