--- a/public/Lab-Files/Lesson02/Challenges/images.html
+++ b/public/Lab-Files/Lesson02/Challenges/images.html
@@ -10,13 +10,13 @@
     <h1>The perfect trip</h1>
 
     <p>I would go to...</p>
-    <img src="http://www.roadarch.com/11/4/bluewhata.jpg" alt="Whataburger" style="width:300px"</img>
+    <img src="http://www.roadarch.com/11/4/bluewhata.jpg" alt="Whataburger" style="width:300px"/>
     <p>I would see scenes like...</p>
-    <img src="http://i67.tinypic.com/34zhohx.jpg" alt="Wow now thats a burger" style="width:300px"></img>
+    <img src="http://i67.tinypic.com/34zhohx.jpg" alt="Wow now thats a burger" style="width:300px"/>
     <p>And do things like...</p>
-    <img src="http://i65.tinypic.com/2i081g7.jpg" alt="Chillin like a villain" style="width:300px"></img>
+    <img src="http://i65.tinypic.com/2i081g7.jpg" alt="Chillin like a villain" style="width:300px"/>
 
-    <a href="/"><<-back</a>
+    <a href="/">back</a>
 </body>
 
 </html>
