added wild animals

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,13 @@
         <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lists</a></li>
         <li><a href="Lab-Files/Lesson02/Challenges/images.html">Images</a></li>
     </ul>
+    <h2>Lesson03</h2>
     
-    
+    <h3>Assignment:</h3>
+    <a href="#">Lesson03 - Assignment - document.html</a>
+    <h3>Challenges:</h3>
+        <ul>
+        <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Wild Animal</a></li>
+ 
 </body>
 </html>
