addes few more pages for lesson03

--- a/public/Lab-Files/Lesson03/Challenges/wild-animal.html
+++ b/public/Lab-Files/Lesson03/Challenges/wild-animal.html
@@ -10,7 +10,7 @@
         <img src="http://images.fineartamerica.com/images-medium-large-5/portrait-of-a-young-wild-tortoise-tracey-harrington-simpson.jpg"></img>
 
     <p>The <em>Tortoise</em> is awesome because <strong>They Chill</strong>.</p>
-    
+    <br
        <a href="../../../index.html">BACK</a>
     </div>
 </body>
@@ -19,6 +19,6 @@
 <style>
     
     .main {background-color:#F1E4D3;margin:0 auto;text-align: center;}
-    img {border-radius: 50%;margin: 0 auto;display:block;]
+    .main img {border-radius: 50%;margin: 0 auto;display:block;]
 </style>
 </html>
