--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     <h3>Challenges:</h3>
         <ul>
         <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Wild Animal</a></li>
- 
+         <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html">Apples and Bananas</a></li>
+
+        <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Box Positioning</a></li>
+
 </body>
 </html>
