Fixed back button in Lesson02 challenges

--- a/public/Lab-Files/Lesson02/Challenges/blog-post.html
+++ b/public/Lab-Files/Lesson02/Challenges/blog-post.html
@@ -5,7 +5,7 @@
     <title>Blog</title>
 </head>
 <body>
-    <a href="/">&lt;&lt;Back</a>
+    <a href="../../../index.html">&lt;&lt; Back</a>
 <h1>Wesley's Blog</h1>
     <p>I don't really know what to write in a blog so Lorem to the rescue!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, reprehenderit, sit quibusdam cumque nostrum nihil ad reiciendis consectetur minus alias iste nesciunt soluta ab sint ea ullam culpa totam quae doloribus vel libero perferendis itaque voluptatum repellendus pariatur qui adipisci optio modi esse. Ipsam, veniam, aliquam. Nobis, culpa quasi placeat!</p>
