--- a/public/Lab-Files/Lesson02/Challenges/text-level-elements.html
+++ b/public/Lab-Files/Lesson02/Challenges/text-level-elements.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <a href="/"><< Back</a>
+    <a href="../../../index.html">&lt;&lt; Back</a>
     <p> <strong>Web development</strong> is a broad term for the work involved in developing a web site for the Internet (World Wide Web) or an intranet (a private network). Web development can range from developing the simplest static single page of plain
         text to the most complex web-based internet applications, electronic businesses, and social network services. A more comprehensive list of tasks to which web development commonly refers, may include <strong>web engineering, web design, web content development,
         client liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development</strong>. Among web professionals, "web development" usually refers to the <em>main non-design aspects</em> of building web sites: writing
