--- a/public/Lab-Files/Lesson02/Challenges/lists.html
+++ b/public/Lab-Files/Lesson02/Challenges/lists.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/">&lt;&lt;Back</a>
+    <a href="../../../index.html">&lt;&lt; Back</a>
     <h2>Things I'd like to learn</h2>
     <ol>
         <li>How to code better</li>
