Lesson02 Back Button Update

--- a/public/Lab-Files/Lesson02/Challenges/images.html
+++ b/public/Lab-Files/Lesson02/Challenges/images.html
@@ -5,7 +5,7 @@
     <title>My Perfect Trip</title>
 </head>
 <body>
-    <a href="/">Go Back</a>
+    <a href="../../../index.html">Go Back</a>
     <h1>The perfect trip</h1>
         <p>I would...</p>
             <img src="http://az598155.vo.msecnd.net/wp-uploads/2014/11/Colorful-Travel-Around-The-World-Illustration-Vector_Titan-UI.jpg" alt="Travel Around the World"/>
