--- a/public/Lab-Files/Lesson02/Challenges/lists.html
+++ b/public/Lab-Files/Lesson02/Challenges/lists.html
@@ -5,7 +5,7 @@
     <title>Lists</title>
 </head>
 <body>
-    <a href="/">Go Back</a>
+    <a href="../../../index.html">Go Back</a>
     <ol>
         <li>How to properly code a website</li>
         <li>How to style an amazing website</li>
