--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 <body>
 <h1>Table of Contents:</h1>
 <h2>Lesson02</h2>
+<h3>Assignments:</h3>
+<ul>
+    <li><a href="Lab-Files/Lesson02/Assignments/resume.html">Lesson02 - Assignments - resume.html</a></li>
+</ul>
 <h3>Challenges:</h3>
 <ul>
     <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html"> Lesson02 - Challenges - blog-post.html</a></li>
@@ -14,6 +18,17 @@
     <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
     <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
 </ul>
+
+<h2>Lesson03</h2>
+<h3>Assignments:</h3>
+
+<h3>Challenges:</h3>
+<ul>
+    <li> <a href="Lab-Files/Lesson03/Challenges/wild-animal.html"> Lesson03 - Challenges - wild-animal.html</a></li>
+    <li> <a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Lesson03 - Challengs - apples-bananas.html</a></li>
+    <li></li>
+</ul>
+
 
 </body>
 </html>
