--- a/public/Lab-Files/Lesson02/Challenges/text-level-element.html
+++ b/public/Lab-Files/Lesson02/Challenges/text-level-element.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <a href="/">Go Back</a>
+    <a href="../../../index.html">Go Back</a>
     <p>Web development is a broad term for the work involved in developing a web site for the Internet <strong>(World Wide Web) or an intranet (a private network)</strong>. Web development can range from developing the simplest static single page of plain
         text to the most complex web-based internet applications, electronic businesses, and social network services. A more comprehensive list of tasks to which <em>web development commonly refers, may include web engineering, web design, web content development, client
         liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development</em>. Among web professionals, "web development" usually refers to the main non-design aspects of building web sites: writing
