Fixed lesson 2 challenges

--- a/public/Lab-Files/Lesson02/Challenges/images.html
+++ b/public/Lab-Files/Lesson02/Challenges/images.html
@@ -5,7 +5,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+      <a href="../../../index.html"> Back </a>
+
     <h1>The perfect trip</h1>
 
     <p>I would go to Whistler, British Columbia <br>
@@ -17,7 +18,7 @@
            <img src="https://www.whistler.com/images/header/404-whistler.jpg" alt="Photo of Snow" style="width:600px;height:300px;">   
     </p>
 
-    <p>And do things like the following:
+    <p>And do things like the following: <br>
          <img src="https://www.whistler.com/images/header/whistler-winter-album-2016.jpg" alt="Photo of Skiing" style="width:650px;height:400px;">
     </p>
 
