--- a/public/Lab-Files/Lesson02/Challenges/lists.html
+++ b/public/Lab-Files/Lesson02/Challenges/lists.html
@@ -5,6 +5,8 @@
     <title>Lists</title>
 </head>
 <body>
+  <a href="../../../index.html"> Back </a>
+
     <ol>
         <li>HTML</li>
         <li>CSS</li>
