--- a/public/Lab-Files/Lesson02/Challenges/resume.html
+++ b/public/Lab-Files/Lesson02/Challenges/resume.html
@@ -5,6 +5,8 @@
     <title>Resume</title>
 </head>
 <body>
+    <a href="../../../index.html"> Back </a>
+
     <header>
         <h1>Manuel Cerna</h1>
         <p>9626 Maytum Circle</p>
