Lesson02 Lab Completed

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenges - lists.html</a></li>
     <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenges - images.html</a></li>
 </ul>
+<h3>Labs:</h3>
+<ul>
+    <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Labs - syb.html</a></li>
+</ul>
 
 <h2>Lesson03</h2>
 <h3>Assignments:</h3>
@@ -25,8 +29,9 @@
 <h3>Challenges:</h3>
 <ul>
     <li> <a href="Lab-Files/Lesson03/Challenges/wild-animal.html"> Lesson03 - Challenges - wild-animal.html</a></li>
-    <li> <a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Lesson03 - Challengs - apples-bananas.html</a></li>
-    <li></li>
+    <li> <a href="Lab-Files/Lesson03/Challenges/apples-bananas.html"> Lesson03 - Challenges - apples-bananas.html</a></li>
+    <li> <a href="Lab-Files/Lesson03/Challenges/box-positioning.html"> Lesson03 - Challenges - box-positioning.html</a></li>
+    <li> <a href="Lab-Files/Lesson03/Challenges/box-positioning.css"> Lesson03 - Challenges - box-positioning.css</a></li>
 </ul>
 
 
