Updated Lesson03 labs to add the back button to return to index.html

--- a/public/Lab-Files/Lesson03/Labs/Habitat/CCYP/syb.html
+++ b/public/Lab-Files/Lesson03/Labs/Habitat/CCYP/syb.html
@@ -12,6 +12,9 @@
 
 <!-- HEADER -->
 <header>
+<div id="return">
+<a href="../../../../../index.html"> Back </a>
+</div>
 <div id="head"></div> 
 <div id="navbar">
 <img height="22" src="syb/sybheaders_02.jpg" width="153" alt="Link goes back to current page." /><img height="22" src="syb/sybheaders_03.jpg" width="72" id="FAQs" alt="Click here to get facts about Habitat." /><img height="22" src="syb/sybheaders_04.jpg" width="72"  id="history" alt="Click here to learn about the history of Habitat."/><img height="22" src="syb/sybheaders_05.jpg" width="72" id="newsroom" alt="Click here to access press releases about Habitat."/><img height="22" src="syb/sybheaders_06.jpg" width="72" id="giftcards" alt="Click here to access tax-deductible gift cards."/><img height="22" src="syb/sybheaders_07.jpg" width="72" id="photos" alt="Click here to view photos from a typical Habitat day." /><img height="22" src="syb/sybheaders_08.jpg" width="72" id="apply" alt="Click here to download an application." /><img height="22" src="syb/sybheaders_09.jpg" width="15" alt="Be a part of our team!" /></div>
